[gd_scene load_steps=3 format=3 uid="uid://d2dkwwowswngd"]

[ext_resource type="Script" uid="uid://m2kxwjfremb8" path="res://screens/main_title/main_title.gd" id="1_1mt6c"]
[ext_resource type="Texture2D" uid="uid://dsl3byg27wiav" path="res://screens/main_title/title.png" id="2_u1s1t"]

[node name="MainTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mt6c")
new_game_scene = "uid://cal30tmntd5bg"
continue_game_scene = "uid://cal30tmntd5bg"

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.905882, 0.776471, 1, 1)

[node name="TitleTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u1s1t")
expand_mode = 3

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 265.0
offset_right = -26.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 265.0
offset_right = 109.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 157.0
offset_top = 265.0
offset_right = 227.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 257.0
offset_top = 265.0
offset_right = 299.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
